# uf2-batch-flasher

./: .gitignore  README.md  flake.nix  overlay.nix
board/uf2-batch-flasher/: fp-info-cache  level1.kicad_sch  level2.kicad_sch  uf2-batch-flasher.kicad_prl  uf2-batch-flasher.kicad_pro  uf2-batch-flasher.kicad_sch  usb-port.kicad_sch
board/uf2-batch-flasher/imports/: onsemi-FairChild.kicad_sym
board/uf2-batch-flasher/imports/RP-Pico Libraries/: MCU_RaspberryPi_and_Boards_v2.kicad_sym
board/uf2-batch-flasher/imports/RaspberryPi_Pico_STEP/: DIP-40_W17.78mm_Socket.step  RaspberryPi_Pico_AddedHeaders.step  RaspberryPi_Pico_AddedHeaders_Socketed.step  RaspberryPi_Pico_H.step  RaspberryPi_Pico_H_Socketed.step  RaspberryPi_Pico_W.step  RaspberryPi_Pico_W_AddedHeaders_Socketed.step
firmware/: CMakeLists.txt  README.md  default.nix  input.c  input.h  lwipopts.h  main.c  makefsdata  panic.c  panic.h  pipe.c  pipe.h  shell.nix  stdio_web.c  stdio_web.h  tcp_server.c  tcp_server.h  tusb_config.h  usb_host.c  usb_host.h  web_server.c  web_server.h  wifi.cmake.template
firmware/cli/: uf2bf.py
firmware/fs/: index.html  module.index.js  status.json  stdout.ssi  stdout.txt
pcb/: fp-lib-table  level1.kicad_sch  level2.kicad_sch  sym-lib-table  uf2-batch-flasher.kicad_prl
pcb/imports/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
pcb/imports/RaspberryPi_Pico/Module_RaspberryPi_Pico.pretty/: RaspberryPi_Pico_W_SMD.kicad_mod  RaspberryPi_Pico_W_SMD_MountingHoles.kicad_mod
pcb/imports/RaspberryPi_Pico_STEP/: RaspberryPi_Pico.step  RaspberryPi_Pico_WH.step  RaspberryPi_Pico_WH_Socketed.step  RaspberryPi_Pico_W_AddedHeaders.step
